# football_prediction_v19

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-full.txt  requirements.txt
config/: data_sources.json  league_market_profiles_version.json  team_aliases.json
data/: final_scores.csv  final_scores_template.csv  match_template.csv  sample_matches.csv  seriea_fixtures_today.csv  upcoming_belgium_fixtures.csv  upcoming_d2_fixtures.csv  upcoming_epl_fixtures.csv  upcoming_eredivisie_fixtures.csv  upcoming_fixtures.csv  upcoming_fixtures_template.csv  upcoming_laliga_fixtures.csv  upcoming_ligue1_fixtures.csv  upcoming_mls_fixtures.csv  upcoming_mls_fixtures_ready.csv  upcoming_serie_a_fixtures.csv  upcoming_serie_a_fixtures_ready.csv  upcoming_seriea_late_fixtures.csv
docs/: COMMANDS.md  DATA_REQUIREMENTS.md  MLS_PAPER_TEST.md  QUICKSTART.md  WATCHLIST_RULES.md  data_schema.md
logs/: phase6_baseline.txt
models/: real_model.joblib  sample_model.joblib  sample_odds_pipeline_model.joblib  sample_pipeline_model.joblib
notebooks/: 01_quickstart.ipynb
outputs/: backtest_d2_2024_report.md  backtest_eredivisie_2024_report.md  backtest_mls_2024_report.md  backtest_mls_2025_report.md  backtest_mls_report.md  backtest_report.md  backtest_top5_2023_report.md  pipeline_backtest_report.md  strict_backtest_report.md
scripts/: _append_totals_tests.py  _build_totals_pipeline.py  _check_eredivisie_data.py  _context_signals.py  _watchlist.py  aggregate_ensemble_evidence.py  aggregate_walk_forward_results.py  analyze_tier_rule_candidates.py  backtest_model.py  (+49 more)
(+245 files in other folders)
