[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-prediction-v19"
version = "0.1.0"
description = "Football match prediction model with rolling xG features and v1.9 rule overlay"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.2",
  "joblib>=1.2",
  "matplotlib>=3.7",
]

[project.scripts]
fpv19 = "football_prediction_v19.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
